--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^5.2.0",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.0.3"
     }
 }
